Simplify build.gradle

--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,15 @@ plugins {
 }
 
 group = 'com.amdelamar'
-version = '0.1.0'
+version = '0.0.1'
 jar.baseName = 'vertx-scala'
 jar.enabled = false
+mainClassName = 'hello.MainVerticle'
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
 }
 
 dependencies {
@@ -26,24 +27,4 @@ dependencies {
 
     // test dependencies
     testCompile 'junit:junit:4.12'
-}
-
-mainClassName = 'hello.Server'
-def mainVerticleName = 'hello.MainVerticle'
-def watchForChange = 'src/**/*'
-def doOnChange = './gradlew classes'
-if (System.getProperty("os.name").toLowerCase().contains("windows")) {
-    doOnChange = '.\\gradlew classes'
-}
-
-// Vertx redeploy
-run {
-    args = ['run', mainVerticleName, "--redeploy=$watchForChange", "--launcher-class=$mainClassName", "--on-redeploy=$doOnChange"]
-}
-
-shadowJar {
-    classifier = null
-    manifest {
-        attributes "Main-Verticle": mainVerticleName
-    }
 }
